testing/framework/resources/Functional/Failing/sandbox/hive/6.q
select o.cust_id, o.order_total,t.trans_info.prod_id[0] from hive.orders as o, `clicks/clicks.json` t where o.cust_id=t.user_info.cust_id and t.trans_info.prod_id[0] is not null and o.order_total > (select avg(inord.order_total) from hive.orders inord where inord.state = o.state );
